[package]
name = "speech-cache"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
ordered-float = { version = "4.6.0", features = ["serde"] }
actix-cors = "0.7.0"
actix-web = "4"
byte-unit = "5.1.4"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.15.4"
derive_more = { version = "1.0.0", features = ["full"] }
lru-mem = "0.3.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
symphonia = { version = "0.5.4", features = ["mp3"] }
mp3lame-encoder = "0.2.1"
